added new postcss modules

--- a/app/index.html
+++ b/app/index.html
@@ -4,11 +4,14 @@
     <meta charset="utf-8">
     <meta name="description" content="Bookkeeping and payroll services serving Reno, Nevada small busniesses">
     <title>C&amp;M Bookkeeping, LLC</title>
+    <link rel="stylesheet" href="temp/styles/styles.css">
   </head>
   <body>
     <div class="container">
-      <header id="menu" class="">
-
+      <header id="menu" class="header">
+        <div class="header__logo">
+          <img src="assets/images/cm-logo.svg" alt="C&amp;M logo image">
+        </div>
       </header>
       <main>
         <section id="hero" class="large-hero">
