added piped css file in temp folder

--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="description" content="Bookkeeping and payroll services serving Reno, Nevada small busniesses">
+    <meta name="keywords" content="Bookkeeping, payroll, business support services">
     <title>C&amp;M Bookkeeping, LLC</title>
+    <link href="https://fonts.googleapis.com/css?family=Lato|Roboto+Condensed" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Great+Vibes' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="temp/styles/styles.css">
   </head>
   <body>
