tried to fix my layout issues

--- a/app/index.html
+++ b/app/index.html
@@ -27,68 +27,64 @@
       </header>
       <main>
         <section id="hero" class="hero page-section">
-          <div class="box">
-            <div class="wrapper">
-              <h1 class="headline">Bookkeeping &amp; Payroll for Small Business</h1>
-              <h2 class="headline">Serving the greater Reno, Nevada community</h2>
-            </div>
+          <div class="wrapper text--right">
+            <h1 class="hero__head-right">Bookkeeping &amp; Payroll for Small Business</h1>
+            <h2 class="hero__sub-right">Serving the greater Reno, Nevada community</h2>
           </div>
-          <div class="box">
-            <div class="wrapper">
-              <h3 class="headline">Helping Your Business Build &amp; Grow</h3>
-              <ul>
-                <li>Bookkeeping</li>
-                <li>Business support</li>
-                <li>Payroll</li>
-              </ul>
-              <p>Simplify your daily workflow Save time &amp; money</p>
-            </div>
+          <div class="wrapper text-left">
+            <h3 class="hero__sub-left">Helping Your Business Build &amp; Grow</h3>
+            <ul class="hero__list-left">
+              <li>Bookkeeping</li>
+              <li>Business support</li>
+              <li>Payroll</li>
+            </ul>
+            <p class="">Simplify your daily workflow Save time &amp; money</p>
           </div>
-          <div class="box">
-            <div class="wrapper">
-              <p><a href="tel:7755256212" class="btn btn--orange btn--large">Get Started Today</a></p>
-              <p>Your Partner in Success</p>
-            </div>
+          <div class="wrapper text--right">
+            <p><a href="tel:7755256212" class="btn btn--orange btn--large">Get Started Today</a></p>
+            <p>Your Partner in Success</p>
           </div>
         </section>
-        <section id="services" class="page-section page-section--blue">
+        <section id="services" class="page-section">
           <div class="wrapper">
-            <h1 class="headline">Our Services</h1>
-            <div class="box box--white box--inline">
-              <h2 class="headline">Bookkeeping</h2>
-              <ul>
-                <li>Double-Entry Bookkeeping</li>
-                <li>Custom Chart of Accounts</li>
-                <li>Accrual or Cash Basis</li>
-                <li>Balance Sheet</li>
-                <li>Profit &amp; Loss</li>
-                <li>QuickBooks Online Setup</li>
-              </ul>
-              <img src="assets/images/T-Assets.png" alt="T-account showing assets account entries">
-            </div>
-            <div class="box box--white box--inline">
-              <h2 class="headline">Business Support</h2>
-              <ul>
-                <li>Nevada Sales Tax</li>
-                <li>Internal Audits</li>
-                <li>Managerial Reports</li>
-                <li>Billing Service</li>
-                <li>Government Forms</li>
-                <li>Worker's Comp Audits</li>
-              </ul>
-              <img src="assets/images/T-Liability.png" alt="T-account showing liabilities account entries">
-            </div>
-            <div class="box box--white box--inline">
-              <h2>Payroll</h2>
-              <ul>
-                <li>Payroll Tax Deductions</li>
-                <li>Check Printing</li>
-                <li>Wage Garnishments</li>
-                <li>Electronic Payments</li>
-                <li>Quarterly Payroll Reports</li>
-                <li>1099 &amp; W-2</li>
-              </ul>
-              <img src="assets/images/T-Equity.png" alt="T-account shoing equity account entries">
+            <div class="row">
+              <h1 class="">Our Services</h1>
+              <div class="row__4">
+                <h2 class="">Bookkeeping</h2>
+                <ul>
+                  <li>Double-Entry Bookkeeping</li>
+                  <li>Custom Chart of Accounts</li>
+                  <li>Accrual or Cash Basis</li>
+                  <li>Balance Sheet</li>
+                  <li>Profit &amp; Loss</li>
+                  <li>QuickBooks Online Setup</li>
+                </ul>
+                <img src="assets/images/T-Assets.png" alt="T-account showing assets account entries">
+              </div>
+              <div class="row__4">
+                <h2 class="">Business Support</h2>
+                <ul>
+                  <li>Nevada Sales Tax</li>
+                  <li>Internal Audits</li>
+                  <li>Managerial Reports</li>
+                  <li>Billing Service</li>
+                  <li>Government Forms</li>
+                  <li>Worker's Comp Audits</li>
+                </ul>
+                <img src="assets/images/T-Liability.png" alt="T-account showing liabilities account entries">
+              </div>
+              <div class="row__4">
+                <h2>Payroll</h2>
+                <ul>
+                  <li>Payroll Tax Deductions</li>
+                  <li>Check Printing</li>
+                  <li>Wage Garnishments</li>
+                  <li>Electronic Payments</li>
+                  <li>Quarterly Payroll Reports</li>
+                  <li>1099 &amp; W-2</li>
+                </ul>
+                <img src="assets/images/T-Equity.png" alt="T-account shoing equity account entries">
+              </div>
             </div>
           </div>
         </section>
